--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8888
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/dream001
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hello_springboot
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
