--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-server.port=8888
+server.port=8008
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hello_springboot
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.activiti.database-schema-update=true
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
+mybatis.type-aliases-package=com.dream.entity
 
 spring.thymeleaf.cache=false
