--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8008
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hello_springboot
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test001
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
