--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,21 @@
 server.port=8008
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test001
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test001?autoReconnect=true&useSSL=false
+spring.datasource.username=mysql
+spring.datasource.password=mysql
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+flyway.validate-on-migrate=false
+flyway.check-location=false
+
+#spring.jackson.time-zone=
+#spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+#spring.jackson.serialization.indent_output=true
 
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 mybatis.type-aliases-package=com.dream.entity
 
 spring.thymeleaf.cache=false
+
+spring.http.multipart.maxFileSize=30Mb
+spring.http.multipart.maxRequestSize=30Mb
